--- a/EmployeeApp/Pages/Index.cshtml
+++ b/EmployeeApp/Pages/Index.cshtml
@@ -6,16 +6,18 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Employee App</h1>
-  
-</div>
+
+</div></div>
 
 <div class="card-columns">
     @foreach (var employee in Model.Employees)
     {
-
-        <h2>Name: @employee.Name</h2>
-        <h2>Manager: @employee.Manager</h2>
-        <h2>Address: @employee.Address</h2>
+        <div class="card">
+            <div class="card-body">
+                <h3>Name: @employee.Name</h3>
+                <h3>Job Title: @employee.JobTitle</h3>
+            </div>
+        </div>
 
     }
 </div>
