--- a/EmployeeApp/Pages/Shared/_Layout.cshtml
+++ b/EmployeeApp/Pages/Shared/_Layout.cshtml
@@ -40,10 +40,12 @@
             &copy; 2021 - EmployeeApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
-
+    <script src="_framework/blazor.server.js"></script>
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
 
     @RenderSection("Scripts", required: false)
 </body>
